@@ -1,3 +1,7 @@
+2002-05-09  Peter Bienstman <Peter.Bienstman@rug.ac.be>
+
+	* infstack.py: New test.
+
 2002-05-07  Peter Bienstman <Peter.Bienstman@rug.ac.be>
 
 	* precision.py: New test.
